# report

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  service.nomad
.github/_workflows/: deploy-dev.yaml
.github/workflows/: deploy-main.yaml
src/: lib.rs  logging.rs  main.rs
src/api/: FILE_DESCRIPTOR_SET  mod.rs  peoplesmarkets.report.v1.rs  sited_io.report.v1.rs
src/services/: mod.rs  report.rs  report_service.rs
