[package]
name = "report"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.30", default-features = false, features = ["clock"] }
http = { version = "0.2.9", default-features = false }
jsonwebtoken = { version = "8", default-features = false, features = [
  "use_pem",
] }
octocrab = { version = "0.31.2" }
openssl = { version = "0.10.57", default-features = false, features = [
  "vendored",
] }
prost = { version = "0.12.0", default-features = false }
tokio = { version = "1.32.0", default-features = false, features = [
  "macros",
  "rt",
] }
tonic = { version = "0.10.0", default-features = false, features = [
  "transport",
  "tls",
  "tls-roots",
] }
tonic-health = { version = "0.10.0", default-features = false, features = [
  "transport",
] }
tonic-reflection = { version = "0.10.0", default-features = false }
tonic-web = { version = "0.10.0", default-features = false }
tower-http = { version = "0.4.4", default-features = false, features = [
  "cors",
  "trace",
] }
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "tracing-log",
  "fmt",
] }
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.10.0", default-features = false, features = [
  "prost",
  "transport",
] }
